devscripts (2.15.1+exp1) UNRELEASED; urgency=medium

  [ Dominique Dumont ]
  * licensecheck: handle license like GPL version 2 or 3 (which is not GPL-2+)

  [ Daniel Kahn Gillmor ]
  * uscan: explicitly dearmor, rather than --import upstream signing key
    (Closes: #768345)

 -- James McCoy <jamessan@debian.org>  Sat, 03 Jan 2015 00:47:36 -0500

devscripts (2.15.1) unstable; urgency=medium

  [ Julien Cristau ]
  * grep-excuses: update URLs to use https://release.debian.org/

  [ David Prévot ]
  * French translation update

 -- James McCoy <jamessan@debian.org>  Thu, 01 Jan 2015 09:50:36 -0500

devscripts (2.14.11) unstable; urgency=medium

  [ Paul Wise ]
  * Suggest debbindiff for deep .deb comparisons
  * Use mirror.ftp-master instead of specific hostnames

  [ James McCoy ]
  * debcommit: Correctly show --strip-message is the default in --help.
    (Closes: #766885)
  * mk-origtargz: Warn about unmatched Files-Excluded patterns.  (Closes:
    #766641)
  * annotate-output: Fix handling of a date format that contains whitespace.
    (Closes: #766180)
  * Fix regression in dpkg-architecture using scripts when only -a or -t is
    specified, rather than both or neither.  (Closes: #768587)

  [ Jakub Wilk ]
  * sadt:
    + Fix handling of rw-build-tree restriction
    + Improve handling of non-executable test files.  When rw-build-tree is in
      effect, simply chmod the file.  Otherwise, attempt to chmod the file
      (skipping the test on failure) and restore the original permissions on
      completion.  (Closes: #749729)

  [ Adam D. Barratt ]
  * debchange:
    + Fix handling of changelogs where the most recent trailer line does not
      include a maintainer name.  (Closes: #766516)
    + Add jessie-backports to the version mapping for --bpo.
  * bts: Support the "stretch", "buster", "stretch-ignore" and "buster-ignore"
    tags.

  [ Stefano Zacchiroli ]
  * bts:
    + Support for the "newcomer" tag