@@ -7,6 +7,10 @@ devscripts (2.15.1+exp1) UNRELEASED; urgency=medium
   * uscan: explicitly dearmor, rather than --import upstream signing key
     (Closes: #768345)
 
+  [ James McCoy ]
+  * debsnap: When specified version or architectures aren't available, warn
+    and exit with error code 2.  (Closes: #774276)
+
  -- James McCoy <jamessan@debian.org>  Sat, 03 Jan 2015 00:47:36 -0500
 
 devscripts (2.15.1) unstable; urgency=medium
